2007-07-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-sum.el (gnus-summary-catchup): Don't recognize cached articles
	as unfetched articles.

2007-07-02  Katsumi Yamaoka  <yamaoka@jpl.org>

	* nnagent.el (nnagent-request-set-mark): Also set the marks for the
	original back end that keeps marks in the local system.

2007-06-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-article-summary-command-nosave): Don't set the 3rd
	arg of pop-to-buffer for XEmacs.
	(gnus-article-read-summary-keys): Ditto; don't restore window
	configuration if summary command ends up with neither article buffer
	nor summary buffer; describe bindings if summary keys end with C-h.

2007-06-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	* message.el (message-fix-before-sending): Skip raw message part to be
	forwarded while checking illegible text.
	(message-forward-make-body-mime, message-forward-make-body): Mark
	signed or encrypted raw message as having no illegible text.

2007-06-19  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-util.el (gnus-add-timestamp-to-message): New user option.
	(gnus-message-with-timestamp-1): New macro.
	(gnus-message-with-timestamp): New function.
	(gnus-message): Use them.

	* nnheader.el (nnheader-message): Use them.

2007-06-16  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus-start.el (gnus-gnus-to-quick-newsrc-format): Add newlines to
	.newsrc.eld file.

2007-06-14  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-agent.el (gnus-agent-fetch-headers)
	(gnus-agent-retrieve-headers): Bind
	gnus-decode-encoded-address-function to identity.

	* nntp.el (nntp-send-xover-command): Recognize an xover command is
	available also when the server returns simply a dot.

	* gnus-ems.el (gnus-x-splash): Redisplay window before measuring it.

2007-06-08  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-ems.el (gnus-x-splash): Fix calculation; error in tty.

2007-06-07  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-ems.el (gnus-x-splash): Make it work.
